Minor Fixes
**Details**

- Added existsById for Account
- Verify accounts exist before transaction processing
- Set compiler version to Java 11 LTS
- Other minor fixes